--- a/Coursework/wwwroot/index.html
+++ b/Coursework/wwwroot/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
 	<title>Coursework</title>
 	<base href="/" />
 	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
 	<link href="css/app.css" rel="stylesheet" />
 	<link href="Coursework.styles.css" rel="stylesheet" />
+	<link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet"/>
+	
 </head>
 
 <body>
@@ -22,7 +25,10 @@
 		<a class="dismiss">🗙</a>
 	</div>
 
+
 	<script src="_framework/blazor.webview.js" autostart="false"></script>
+
+
 
 </body>
 
